[package]
name = "stocker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = ["macros", "postgres", "json", "chrono", "runtime-actix-native-tls"] }
actix-web = "4.0.1"
toml = "0.5.8"
chrono = { version = "0.4.19", features = ["serde"] }
